test/lexer/error/err_08_underscore_error.pl0
program underscore_error;
var my_var;  // Underscore is illegal in this PL/0 variant
begin
end
